optimize background fetching
